--- a/app/ui/build.gradle
+++ b/app/ui/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation "com.takisoft.fix:preference-v7-colorpicker:${versions.preferencesFix}"
     implementation "com.takisoft.fix:preference-v7-ringtone:${versions.preferencesFix}"
     implementation "com.android.support:recyclerview-v7:${versions.supportLibrary}"
+    implementation "com.android.support:cardview-v7:${versions.supportLibrary}"
     implementation "android.arch.lifecycle:extensions:${versions.lifecycleExtensions}"
     implementation "de.cketti.library.changelog:ckchangelog:1.2.1"
     implementation "com.github.bumptech.glide:glide:3.6.1"
