--- a/app/ui/build.gradle
+++ b/app/ui/build.gradle
@@ -7,6 +7,7 @@ apply from: "${rootProject.projectDir}/gradle/plugins/findbugs-android.gradle"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
 
     implementation project(":app:core")
     implementation project(":mail:common")
